# astrostacker

./: .gitmodules  CMakeLists.txt  CMakePresets.json  abberation_fixer.cpp  aberration_fixer.cpp  config.cpp  execution_plan_builder.cpp  file_manager.cpp  frame_extractor.cpp  ifile_manager.cpp  image_extractor.cpp  images_aligner.cpp  images_cropper.cpp  images_enhancer.cpp  images_picker.cpp  images_splitter.cpp  images_stacker.cpp  main.cpp  object_localizer.cpp  similar_images_picker.cpp  transparency_applier.cpp  utils.cpp  vcpkg.json
.github/workflows/: Build-all.yml  windows-build.yml
tests/: CMakeLists.txt  functional_tests.py  test_config.cpp  test_utils.cpp
